2004-03-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/expand.c (expand_vars_extended):
	new extended variable $[w.layer]

	* fvwm/move_resize.c (MaximizeHeight):
	(MaximizeWidth):
	(CMD_Maximize):
	applied modified layer patch for maximize by Rafal Bisinger

2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_frame_attributes):
	Hopefully fixed BackingStore code and removed now useless backing store
	for decorations

	* fvwm/expand.c (expand_vars_extended):
	new extended variable $[w.desk]

2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.5.11
	released 2.5.10

	* NEWS:
	* configure.in:
	updated for 2.5.10 release

	* libs/Graphics.c (do_relieve_rectangle_with_rotation):
	improved rotation code

	* libs/gravity.c (gravity_add_rotations):
	new function

2004-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__explain_placement):
	new function

	* libs/FScreen.c (FScreenIsRectangleOnScreen):
	new function

	* fvwm/builtins.c (CMD_BugOpts):
	* fvwm/screen.h (ScreenInfo):
	new BugOpts option ExplainWindowPlacement
	renamed some members of Screen

2004-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__place_get_wm_pos):
	(__place_get_nowm_pos):
	(__place_get_placement_flags):
	(__place_window):
	(__place_handle_x_resources):
	(setup_window_placement):
	split into multiple functions
	cleaned up a little

2004-03-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_window_placement):
	* fvwm/placement.c (setup_window_placement):
	moved function to placement.c
	fixed using PLACE_AGAIN placement mode
	(PlaceWindow):
	(__place_window):
	renamed function

2004-03-15  Chris Ross  <cross+fvwm@distal.com>

	* libs/Graphics.c (do_relieve_rectangle_with_rotation)
	allow a negative line_width to invert the relief

2004-03-06  Marcus Lundblad  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawString)
	(FlocaleDrawUnderline)
	(FlocaleTextWidth):