@@ -113,10 +113,6 @@ This selects an fvwm function to be called on a marked window just after
 another winodw get the mark.
 The default is Nop.
 
-.IP "*FvwmProxy: LogFile \fIpathname\fP"
-If given, verbose debugging information is logged to a file named
-by the argument.  The default is no logging.
-
 .SH COMMANDS
 
 .IP "SendToModule FvwmProxy Show"
