@@ -1,3 +1,14 @@
+2004-03-31  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/fvwm.1.in:
+	corrected a typo
+
+2004-03-31  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (unmaximize_fvwm_window):
+	fixed redrawing of maximize button when unmaximizing but when the size
+	and position does not change
+
 2004-03-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/expand.c (expand_vars_extended):
